styles/skills.css
.skills-container {
  display: flex;
  gap: 2rem;
}

.skills {
  display: flex;
  flex-direction: column;
  flex-basis: 35%;
  gap: 0.3rem;
}

.skills > li {
  align-items: center;
  gap: 0.4rem;
}

.skills > li img {
  max-height: 1.2rem;
  max-width: 1.2rem;
}

.knowledge-container {
  display: flex;
  gap: 2rem;
}

.knowledge {
  display: flex;
  flex-direction: column;
  flex-basis: 35%;
  gap: 0.3rem;
}

